Fixed unicorn conf.

--- a/unicorn.conf
+++ b/unicorn.conf
@@ -1,5 +1,5 @@
 worker_processes 1
-working_directory "/home/mastercontrol/www"
+working_directory "/home/mastercontrol/mcp"
 listen 'unix:/tmp/unicorn_basic.sock', :backlog => 512
 timeout 120
 pid "/var/run/unicorn/basic_unicorn.pid"
